syntax = "proto3";

message SessionPack {
    uint64 seesion_id= 1;
	string pack_name = 2;
    string pack_str = 3;
}
message SessionCreate {
    uint64 seesion_id= 1;
}

message SessionDestory {
    uint64 seesion_id= 1;
}